# exploding-kitten-bot-battle

./: .gitignore  AGENTS.md  CHEAT_PREVENTION.md  CONTRIBUTING.md  CORS_FIX_SUMMARY.md  IMPLEMENTATION_SUMMARY.md  MIGRATION_FIX_SUMMARY.md  README.md  SECURITY_FINDINGS.md  bot.py  bot_class.py  bot_loader.py  bot_template.py  card.py  combo_replay.json  combo_test_1.json  debug_replay.json  deck.py  docker-compose.yml  game.py  game_output.txt  game_state.py  main.py  pylintrc  pyproject.toml  render.py  requirements.txt  single_test_output.txt  single_test_output_2.txt  test_output.txt  test_see_future.json
.github/: copilot-instructions.md
backend/: AGENTS.md  Dockerfile  README.md  alembic.ini  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 2de4843f4caa_add_username_column_if_missing.py  90b321684f03_initial_schema.py
backend/app/: auth.py  config.py  database.py  dependencies.py  main.py  migrations.py  models.py  schemas.py
backend/app/commands/: __init__.py  setup_admin.py
backend/app/routers/: arena.py  auth.py  bots.py  replays.py
backend/app/services/: bot_loader.py  bot_versions.py  match_runner.py  storage.py
backend/app/tests/: conftest.py  test_api.py  test_database_wait.py  test_migration_integration.py  test_migrations.py
backend/app/utils/: __init__.py  names.py
backend/backend/storage/bots/user_1/bot_1/: version_1.py
backend/backend/storage/replays/: replay_81db0a50a7db427c9dac2146e2fafd57.json
bots/: AggressiveBot.py  AnthonyBotBot.py  Bot-tler.py  (+35 more)
bots.bak/: Bot_SimoAlessio 1.py  ourbot.py  redpanda.py
(+129 files in other folders)
